# best_practices_for_python

./: .pre-commit-config.yaml  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: tests.yaml
tests/: test_best_practices_for_python.py
